fixed spacing in card buttons and html structure"

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,10 @@ ________________________________*/
 }
 
 .book-card__buttons {
-  grid-area: button;
+  grid-area: buttons;
+  display: flex;
+  justify-content: space-between;
+  padding-inline-start: 0px;
 }
 
 .book-card__buttons li {
